--- a/sample.config
+++ b/sample.config
@@ -1,10 +1,13 @@
 dataId = test
 nt = 2
-coarsek = 64 
-train_desc = /Users/nebula/mylab/copyDetection/data/dst_test/
-index_desc = /Users/nebula/mylab/copyDetection/data/dst_test/
-dim = 128
-iter = 20
-attempts = 3
-bf = 128
+coarsek = 32 
+train_desc = /Users/nebula/mylab/copyDetection/vlad/vlad_desc/
+index_desc = /Users/nebula/mylab/copyDetection/data/index/
+query_desc = /Users/nebula/mylab/copyDetection/data/index/
+dim = 8192
+iter = 50
+attempts = 4
+bf = 16
 num_layer = 1
+num_ret = 5
+ma = 1
