modify codebook training and quantization.

--- a/sample.config
+++ b/sample.config
@@ -1,9 +1,11 @@
-dataId = test
+dataId = /Users/nebula/mylab/copyDetection/xcode_search/IVFADC4/test.out/
 nt = 2
 coarsek = 32 
 train_desc = /Users/nebula/mylab/copyDetection/vlad/vlad_desc/
 index_desc = /Users/nebula/mylab/copyDetection/data/index/
 query_desc = /Users/nebula/mylab/copyDetection/data/index/
+nsq = 256
+nsqbits = 8
 dim = 8192
 iter = 50
 attempts = 4
@@ -11,3 +13,4 @@ bf = 16
 num_layer = 1
 num_ret = 5
 ma = 1
+w = 1
