--- a/sample.config
+++ b/sample.config
@@ -1,16 +1,14 @@
-dataId = /Users/nebula/mylab/copyDetection/xcode_search/IVFADC4/test.out/
+dataId = /Users/nebula/mylab/copyDetection/xcode_search/IVFADC4/avideo/
 nt = 2
-coarsek = 32 
-train_desc = /Users/nebula/mylab/copyDetection/vlad/vlad_desc/
-index_desc = /Users/nebula/mylab/copyDetection/data/index/
-query_desc = /Users/nebula/mylab/copyDetection/data/index/
-nsq = 256
+coarsek = 256
+train_desc = /Users/nebula/mylab/copyDetection/data/avideo/
+index_desc = /Users/nebula/mylab/copyDetection/data/avideo/
+query_desc = /Users/nebula/mylab/copyDetection/data/avideo_query/
+nsq = 64
 nsqbits = 8
 dim = 8192
 iter = 50
 attempts = 4
-bf = 16
-num_layer = 1
-num_ret = 5
+num_ret = 10
 ma = 1
 w = 1
